--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "@headlessui/react": "^1.7.18",
+    "@lottiefiles/dotlottie-react": "^0.12.3",
     "@react-icons/all-files": "^4.1.0",
     "axios": "^1.7.9",
     "firebase": "^10.14.1",
