share and download button

--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "@googlemaps/js-api-loader": "^1.16.8",
     "@headlessui/react": "^1.7.18",
     "@lottiefiles/dotlottie-react": "^0.12.3",
+    "@react-google-maps/api": "^2.20.6",
     "@react-icons/all-files": "^4.1.0",
     "axios": "^1.7.9",
     "firebase": "^10.14.1",
     "framer-motion": "^11.0.3",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.0",
     "lucide-react": "^0.475.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
